--- a/.github/issue-close-app.yml
+++ b/.github/issue-close-app.yml
@@ -1,5 +1,5 @@
 # Comment that will be sent if an issue is judged to be closed
-comment: "This issue is closed because it does not meet our issue template. Please read it."
+comment: "This issue is closed because it does not meet our issue template. Please read it. \n您好，我是问题处理机器人，因为您没有按规定提交问题，所以被我自动关闭了。"
 issueConfigs:
 # There can be several configs for different kind of issues.
 - content:
